[package]
name = "evolution"
version = "0.1.0"
description = "Evolution program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "evolution"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
bridgesplit-program-utils = { git="ssh://git@github.com/bridgesplit/program-utils.git", branch = "token_metadata"  }
anchor-lang = { version = "0.28.0" }
anchor-spl = "0.28.0"
token_metadata = { git = "https://github.com/metaplex-foundation/mpl-token-metadata", features = ["no-entrypoint"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
