[package]
name = "evolution"
version = "0.1.0"
description = "Evolution program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "evolution"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "program-utils/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-token-metadata = { version = "4.1.2" }
program-utils = { git="ssh://git@github.com/bridgesplit/program-utils.git", branch="anchor_30_1" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
