[package]
name = "listings"
version = "0.1.0"
description = "Elixir listings program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "listings"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
bridgesplit-program-utils = { git="ssh://git@github.com/bridgesplit/program-utils.git", branch = "token_metadata"  }
anchor-spl = { version = "0.28.0" }
anchor-lang = { version = "0.28.0", features = ["init-if-needed", "event-cpi"] }
token_metadata = { git = "https://github.com/metaplex-foundation/mpl-token-metadata", features = ["no-entrypoint"] }
mpl-token-auth-rules = { version = "=1.4.3-beta.1", features = ["no-entrypoint"] }
vault = { git="ssh://git@github.com/bridgesplit/bridgesplit-program.git", features=["no-entrypoint"] }
num_enum = "0.5.6"


[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
