[package]
name = "listings"
version = "0.1.0"
description = "Elixir listings program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "listings"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "program-utils/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-token-metadata = { version = "4.1.2" }
mpl-bubblegum = { version = "1.4.0" }
program-utils = { git="ssh://git@github.com/bridgesplit/program-utils.git", branch="anchor_30_1" }
vault = { git="ssh://git@github.com/bridgesplit/bridgesplit-program.git", branch="feat/wns_support", features=["no-entrypoint"] }
num_enum = "0.5.6"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
